Add Support for coveralls code coverage.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,9 @@ php:
   - 7.0
   - hhvm
 
-script: composer install
+script:
+  - composer install
+  - phpunit
+
+after_success:
+  - php vendor/bin/coveralls -v
