--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "phpunit/phpunit": "~4.0",
     "php-http/mock-client": "^0.3",
     "php-http/message": "^1.0",
-    "guzzlehttp/psr7": "^1.0"
+    "guzzlehttp/psr7": "^1.0",
+    "satooshi/php-coveralls": "~1.0"
   },
   "autoload": {
     "psr-4": { "Botamp\\" : "lib/" }
